<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@drawable/plain"
    tools:context=".MainActivity">

    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome_to_b_t_stores"
        android:textStyle="bold|italic"
        android:textSize="44sp"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <EditText

        android:id="@+id/grocery_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:textColor="#FFF"
        android:hint="@string/grocery" />

    <EditText
        android:id="@+id/grocery_price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="#FFF"
        android:hint="@string/grocery_amount"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical">

        <Button
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickAddToList"
            android:text="@string/btn_add_to_list" />

        <Button
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickCheckout"
            android:text="@string/checkout" />
    </LinearLayout>


</LinearLayout>