<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain"
    android:orientation="vertical"
    tools:context=".CheckoutActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:contentDescription="@string/user_profile_picture"
            android:src="@drawable/android" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/name_user"
            android:textColor="#FFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_toEndOf="@id/profile"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/user_address"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userAddress"
            android:layout_toEndOf="@id/profile"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/user_email"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView

            android:id="@+id/totalItemsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/total_items"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/totalItemsAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/zero_value"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/shippingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalItemsText"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/shipping"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/shippingAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalItemsAmountText"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/zero_value"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/orderTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shippingText"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/order_total"
            android:textColor="#FFF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderTotalAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shippingAmountText"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/zero_value"
            android:textColor="#FFF"
            android:textSize="22sp" />
    </RelativeLayout>

</LinearLayout>